[gd_scene load_steps=12 format=3 uid="uid://da7obft7ajhcl"]

[ext_resource type="Script" path="res://Scripts/Enemies/Mummy.gd" id="1_l0r6w"]
[ext_resource type="Texture2D" uid="uid://boafd3umcfjrv" path="res://Assets/Enemies/mommy.png" id="2_ldgbg"]
[ext_resource type="Script" path="res://Scripts/Components/DamageByTouchComponent.gd" id="3_4eguy"]
[ext_resource type="Script" path="res://Scripts/Components/HealthComponent.gd" id="4_0wcd0"]
[ext_resource type="AudioStream" uid="uid://bgdah06c44arq" path="res://Sound/Effect/Mummy.ogg" id="5_728bh"]
[ext_resource type="AudioStream" uid="uid://gmroybi8omaa" path="res://Sound/Effect/MummyDeath.ogg" id="6_u6awi"]

[sub_resource type="Animation" id="Animation_5fctv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_686pg"]
resource_name = "deathTop"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1e-05)]
}

[sub_resource type="Animation" id="Animation_wqqsc"]
resource_name = "walking"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4tlw7"]
_data = {
"RESET": SubResource("Animation_5fctv"),
"deathTop": SubResource("Animation_686pg"),
"walking": SubResource("Animation_wqqsc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tefm4"]
size = Vector2(338, 378)

[node name="Mummy" type="CharacterBody2D" groups=["Enemy"]]
position = Vector2(1029, 618)
collision_layer = 2
collision_mask = 8
script = ExtResource("1_l0r6w")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_ldgbg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4tlw7")
}

[node name="DamageByTouchComponent" type="Area2D" parent="."]
collision_layer = 0
script = ExtResource("3_4eguy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageByTouchComponent"]
position = Vector2(15, -6)
shape = SubResource("RectangleShape2D_tefm4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(15, -6)
shape = SubResource("RectangleShape2D_tefm4")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_0wcd0")
healt = 1
allowedDamageTypes = Array[int]([1])

[node name="FlipSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_728bh")
bus = &"Effect"

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_u6awi")
bus = &"Effect"
